--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,13 +1,26 @@
 {% extends 'main.html'%}
 
 {% block content %}
-<h1>Home Template</h1>
+
+<style>
+    .home-container{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+</style>
+<div class="home-container">
+    <div>
+        <h3>Browse Topics</h3>
+        <hr>
+    </div>
 <div>
     <a href="{% url 'create-room' %}">Crete Room</a>
     <div>
         {% for room in rooms%}
             <div>
                 <a href="{% url 'update-room' room.id %}">Edit</a>
+                <a href="{% url 'delete-room' room.id %}">Delete</a>
+
                 <span>@{{room.host.username}}</span>
                 <h5>{{room.id}}--<a href="{% url 'room' room.id %}">{{room.name}}</h5>
                 <small>{{room.topic.name}}</small>
@@ -15,6 +28,7 @@
             </div>
         {% endfor%}
     </div>
+</div>
 </div>
 
 {% endblock content%}
